<resources>
    <string name="app_name">BareHW2</string>
    <string name="Pig_Dice">Pig Dice</string>
    <string name="Play">Start Game</string>
    <string name="confirm">Confirm</string>
    <string name="Learn_More">About Pig Dice</string>
    <string name="credits">Credits</string>
    <string name="allImages">All Images from Wikimedia commons\nDice Roll logic from Zybooks</string>
    <string name="you_may">You may bank the current score you have, and pass your turn to your opponent. If you roll a 1 then you lose your current bank score and must pass to your opponent</string>
    <string name="onyour">On your turn you have the opportunity to roll the dice. Any number that isn\'t a 1 is added to your running bank total</string>
    <string name="first">First, you will be prompted to set the winning value for the game</string>

    <string name="the_objective">The objective of pig dice is to reach the top score first</string>

    <string name="SetScore">Set Score to Win</string>
    <string name="zero">0</string>

    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="roll">Roll</string>
    <string name="bust">Bust!</string>
    <string name="currentBank">Current Bank</string>
    <string name="bank">Bank Score</string>
    <string name="playAgain">Play Again?</string>
    <string name="player1turn">It\'s your turn!</string>
    <string name="player2turn">It\'s the cpu\'s turn</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>