<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".learnMore">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/LearnTitle"
                android:layout_width="match_parent"
                android:layout_height="47dp"
                android:background="@color/main"

                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginTop="30dp"

                android:text="@string/Learn_More" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="95dp"

                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/the_objective"

                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="95dp"

                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/the_objective"

                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="95dp"

                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/onyour"

                android:textSize="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="95dp"

                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/you_may"

                android:textSize="20sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="47dp"

                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginTop="30dp"
                android:background="@color/main"

                android:text="@string/credits" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="95dp"

                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/allImages"

                android:textSize="20sp"
                />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>