<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="fill"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player1ScoreDisplay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"

                android:background="@color/black"
                android:gravity="center"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="30sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/player1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"

                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/white">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:text="To Win"
                android:textColor="@color/black"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"

                android:text=""
                android:textColor="@color/black"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/player2ScoreDisplay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"

                android:background="@color/black"
                android:gravity="center"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="30sp"
                android:textStyle="bold"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/player2"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"

                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="200dp"

        android:layout_margin="5dp"
        android:layout_marginTop="144dp"
        android:rotation="15"
        android:src="@drawable/dice6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="Player 1 Turn"

        android:textAlignment="center"
        android:gravity="center"
        android:textSize="40sp"
        android:textStyle="bold"

    app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="46dp" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/roll"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="1"

                android:gravity="center"
                android:text="@string/bank"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"

                android:text="@string/currentBank"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"

                android:text="12"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>